--- a/amazing.html
+++ b/amazing.html
@@ -1017,8 +1017,8 @@
                       </defs>
                       <use xlink:href="#pin" fill="#424750"></use>
                     </svg>
-                    لطفا شهر خود را انتخواب کنید
-                    <div class="city_hover">لطفا شهر خود را انتخواب کنید</div>
+                    لطفا شهر خود را انتخاب کنید
+                    <div class="city_hover">لطفا شهر خود را انتخاب کنید</div>
                   </label>
                   <input type="radio" name="btn" id="show" />
                   <input type="radio" name="btn" id="hide" />
@@ -6252,7 +6252,7 @@
 <!--final menu end-->
 
  <!-- footer start -->
- <footer class="digi_footer" style="position: absolute; left: 1000px; text-decoration: none;">
+ <footer class="digi_footer" style="position: absolute; left: -500px; text-decoration: none;">
   <!-- top start -->
   <div class="top">
     <svg
